kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: enterprise-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: enterprise-api

  template:
    metadata:
      labels:
        app: enterprise-api

    spec:
      containers:
      - name: enterprise-api

        image: kamleshcloud/enterprise-devsecops-api:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 3000
