kubernetes/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: enterprise-api-service

spec:
  selector:
    app: enterprise-api

  ports:
  - port: 80
    targetPort: 3000

  type: NodePort
